--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Tungalagtamir1864.github.io/schoolwebapp",
+  "homepage": "https://Tungalagtamir1864.github.io/",
   "name": "schoolwebapp",
   "version": "0.1.0",
   "private": true,
